# rust-vulnerable-apps

./: Cargo.toml  LICENSE  README.md  catalog-info.yaml
.circleci/: config.yml
.github/: CODEOWNERS
cors/cors_001_bad_warp/: Cargo.toml
cors/cors_002_bad_iron/: Cargo.toml
cors/cors_003_bad_axum_tower_http/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_01_age/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_02_age/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_03_aes/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_04_aes/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_05_aes/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_06_camellia/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_07_orion/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_08_orion/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_10_age/: Cargo.toml
hardcoded_secret/hardcoded_secret_bad_11_age/: Cargo.toml
hardcoded_secret/hardcoded_secret_good_01_orion/: Cargo.toml
hardcoded_secret/hardcoded_secret_good_02_ring/: Cargo.toml
sneaky/: Cargo.toml
sneaky/src/: main.rs
sqli/sqli_bad_003_sqlx/: Cargo.toml
sqli/sqli_bad_004_sqlx/: Cargo.toml
sqli/sqli_bad_004_sqlx/src/: main.rs
sqli/sqli_bad_005_diesel/: Cargo.toml
sqli/sqli_bad_006_diesel/: Cargo.toml
sqli/sqli_bad_007_postgres/: Cargo.toml
sqli/sqli_bad_009_sqlx/: Cargo.toml
sqli/sqli_bad_009_sqlx/src/: main.rs
sqli/sqli_good_001_sqlx/: Cargo.toml
sqli/sqli_good_002_sqlx/: Cargo.toml
sqli/sqli_good_003_diesel/: Cargo.toml
ssrf/ssrf_001_bad_iron/: Cargo.toml
(+34 files in other folders)
