[package]
name = "sqli_bad_004_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"]}
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio-rustls" ] }