[package]
name = "sqli_bad_009_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"